--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <style>
       body,
       footer {
@@ -28,36 +29,57 @@
       }
     </style>
   </head>
-
-  <body class="bg-white flex justify-center items-center">
-    <div class="p-8 w-full">
-      <div class="flex items-center hero-container h-screen p-48">
-        <div class="w-1/2">
+  <!-- <nav class="flex w-full"><i class="fa-regular fa-moon"></i></nav> -->
+  <body class="bg-[#1c1c1c] flex justify-center items-center">
+    <div class="">
+      <div class="flex items-center justify-center h-screen">
+        <!-- <div class="w-1/2">
           <img
             src="https://media.giphy.com/media/mDcYlTB4f8Mwur1j0Q/giphy.gif"
             alt="Demo GIF"
             class="w-auto h-auto"
           />
-        </div>
-        <div class="w-1/2">
-          <h1 class="text-3xl font-bold text-gray-900">Browser Mingle</h1>
-          <p class="text-gray-500 mt-2">Navigate the web, together.</p>
-          <div class="flex mt-4">
+        </div> -->
+        <div class="px-8 text-center">
+          <h1 class="text-6xl font-bold text-white mb-3">Browser Mingle</h1>
+          <div class="text-md font-extrabold">
+            <!-- <span
+              class="bg-clip-text text-transparent bg-gradient-to-r from-violet-500 to-purple-500"
+            >
+              Navigate the web, together.
+            </span> -->
+            <span class="text-gray-400 font-medium">
+              Navigate the web, together.
+            </span>
+          </div>
+          <div class="flex mt-6 justify-center font-normal">
             <a
               href="#"
               class="bg-purple-500 text-white px-4 py-2 rounded-md mr-4 hover:bg-purple-800 transition duration-300"
-              >Download Extension</a
             >
+              Download Extension
+            </a>
             <a
               href="#"
-              class="bg-gray-900 text-white px-4 py-2 rounded-md hover:bg-white hover:text-black transition duration-300"
-              ><i class="mr-2 fa-brands fa-github"></i> Documentation</a
+              class="bg-white text-black px-4 py-2 rounded-md hover:bg-black hover:text-white transition duration-300"
             >
+              <i class="mr-2 fa-brands fa-github"></i> Documentation
+            </a>
           </div>
+          <!-- <div class="tech-stack-bar bg-gray-200 rounded-full p-4 mt-8">
+            <ul class="flex justify-center gap-8">
+              <li><i class="fa-brands fa-react text-3xl"></i></li>
+              <li>
+                <img class="h-7 w-7" src="supabase-logo-icon.svg" alt="" />
+              </li>
+              <li><i class="fas fa-database text-4xl text-white"></i></li>
+            </ul>
+          </div> -->
         </div>
       </div>
-      <div class="w-full details-container h-screen bg-black">
-        <div class="flex items-center mt-24">
+
+      <!-- <div class="w-full details-container h-screen">
+        <div class="flex items-center justify-center mt-24">
           <div class="w-1/3">
             <h2 class="text-2xl font-bold text-white">Features</h2>
             <ul class="mt-4">
@@ -66,14 +88,14 @@
                 browsing
               </li>
               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Chat with your
-                friends
+                <i class="mr-2 text-green-500 fas fa-check"></i> Chat with
+                people all over the world
               </li>
               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Share links
-                with your friends
+                <i class="mr-2 text-green-500 fas fa-check"></i> React with
+                funky floating emojis
               </li>
-              <li class="text-gray-300">
+               <li class="text-gray-300">
                 <i class="mr-2 text-green-500 fas fa-check"></i> Share
                 screenshots with your friends
               </li>
@@ -87,15 +109,15 @@
                 extension
               </li>
               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Create a room
+                <i class="mr-2 text-green-500 fas fa-check"></i> Visit a website
               </li>
               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Share the room
-                link with your friends
+                <i class="mr-2 text-green-500 fas fa-check"></i> Click on the
+                extension
               </li>
               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Start browsing
-                together
+                <i class="mr-2 text-green-500 fas fa-check"></i> Start chatting
+                in the automatically created room
               </li>
             </ul>
           </div>
@@ -120,12 +142,12 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-    <footer
-      class="fixed bottom-0 w-full bg-white text-gray-900 text-center py-2"
-    >
-      <p>Made with 💚 by <span class="font-semibold">blah</span></p>
-    </footer>
+    <!-- <footer class="fixed bottom-0 w-full text-gray-900 text-center py-2">
+      <p class="text-white">
+        Made with 💜 by <span class="font-semibold">blah</span>
+      </p>
+    </footer> -->
   </body>
 </html>
