added gif and finalized design

--- a/src/index.html
+++ b/src/index.html
@@ -29,42 +29,46 @@
       }
     </style>
   </head>
-  <!-- <nav class="flex w-full"><i class="fa-regular fa-moon"></i></nav> -->
+
   <body class="bg-[#1c1c1c] flex justify-center items-center">
     <div class="">
-      <div class="flex items-center justify-center h-screen">
-        <!-- <div class="w-1/2">
-          <img
-            src="https://media.giphy.com/media/mDcYlTB4f8Mwur1j0Q/giphy.gif"
-            alt="Demo GIF"
-            class="w-auto h-auto"
-          />
-        </div> -->
-        <div class="px-8 text-center">
-          <h1 class="text-6xl font-bold text-white mb-3">Browser Mingle</h1>
-          <div class="text-md font-extrabold">
-            <!-- <span
-              class="bg-clip-text text-transparent bg-gradient-to-r from-violet-500 to-purple-500"
-            >
-              Navigate the web, together.
-            </span> -->
-            <span class="text-gray-400 font-medium">
-              Navigate the web, together.
-            </span>
-          </div>
-          <div class="flex mt-6 justify-center font-normal">
-            <a
-              href="#"
+      <div class="flex items-center justify-center h-screen px-72">
+        <div class="w-1/2 px-8 text-left">
+          <h1
+            class="bg-purple-500 px-5 py-1 rounded-full text-lg font-medium text-white mb-10 inline-block"
+          >
+            <!-- <i class="text-white fa-regular fa-moon"></i> -->
+            <!-- <img class="inline-block" src="../assets/icon48.png" alt="" /> -->
+            Browser Mingle
+          </h1>
+
+          <h1 class="text-2xl font-bold text-white mb-3">
+            Navigate the web, together.
+          </h1>
+          <p class="text-base font-medium text-gray-400">
+            A chrome extension that matches you with people who are consuming
+            similar content and lets you dive into chatrooms while you surf,
+            connecting and chatting with people all over the world in real-time.
+            <!-- Give your browser a major social upgrade. -->
+          </p>
+
+          <div class="flex mt-8 justify-start font-normal">
+            <button
               class="bg-purple-500 text-white px-4 py-2 rounded-md mr-4 hover:bg-purple-800 transition duration-300"
             >
-              Download Extension
-            </a>
-            <a
-              href="#"
+              <a href="#"> Download Extension </a>
+            </button>
+
+            <button
               class="bg-white text-black px-4 py-2 rounded-md hover:bg-black hover:text-white transition duration-300"
             >
-              <i class="mr-2 fa-brands fa-github"></i> Documentation
-            </a>
+              <a
+                href="https://github.com/Sync-Codes/browser-mingle"
+                target="_blank"
+              >
+                <i class="mr-2 fa-brands fa-github"></i> Documentation
+              </a>
+            </button>
           </div>
           <!-- <div class="tech-stack-bar bg-gray-200 rounded-full p-4 mt-8">
             <ul class="flex justify-center gap-8">
@@ -75,6 +79,13 @@
               <li><i class="fas fa-database text-4xl text-white"></i></li>
             </ul>
           </div> -->
+        </div>
+        <div class="w-1/2">
+          <img
+            src="https://media.giphy.com/media/mDcYlTB4f8Mwur1j0Q/giphy.gif"
+            alt="Demo GIF"
+            class="w-auto h-auto"
+          />
         </div>
       </div>
 
