TRIAL#3: fixed background for gh-page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
   </head>
 
-  <body class="bg-[#1c1c1c] flex justify-center items-center">
+  <body class="flex justify-center items-center">
     <div class="">
       <div class="flex items-center justify-center h-screen px-72">
         <div class="w-1/2 px-8 text-left">
