TRIAL#4: fixed background for gh-page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     />
     <link rel="stylesheet" href="/src/css/style.css" />
     <style>
-      body,
-      footer {
+      body {
         font-family: "Inter", sans-serif;
+        background-color: #1c1c1c;
       }
     </style>
   </head>
