--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <style>
       body {
         font-family: "Inter", sans-serif;
-        background-color: #1c1c1c;
+        /* background-color: #1c1c1c; */
       }
     </style>
   </head>
