--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
             Navigate the web, together.
           </h1>
           <p class="text-base font-medium text-gray-400">
-            A chrome extension that matches you with people who are consuming
-            similar content and lets you dive into chatrooms while you surf,
-            connecting and chatting with people all over the world in real-time.
-            <!-- Give your browser a major social upgrade. -->
+            A chrome extension that connects you with people who are consuming
+            similar content as you are. Connect, Chat and spam emojis.
           </p>
 
           <div class="flex mt-8 justify-start font-normal">
