--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
           <h1
             class="bg-purple-500 px-5 py-1 rounded-full text-lg font-medium text-white mb-10 inline-block"
           >
-            <!-- <i class="text-white fa-regular fa-moon"></i> -->
-            <!-- <img class="inline-block" src="../assets/icon48.png" alt="" /> -->
             Browser Mingle
           </h1>
 
@@ -47,8 +45,9 @@
             Navigate the web, together.
           </h1>
           <p class="text-base font-medium text-gray-400">
-            A chrome extension that connects you with people who are consuming
-            similar content. Connect, Chat and spam emojis :D
+            Not your average Chat app. BrowserMingle is a chrome extension that
+            connects you with people who are consuming similar content. Connect,
+            Chat and spam emojis :D
           </p>
 
           <div class="flex mt-8 justify-start font-normal">
@@ -69,15 +68,6 @@
               </a>
             </button>
           </div>
-          <!-- <div class="tech-stack-bar bg-gray-200 rounded-full p-4 mt-8">
-            <ul class="flex justify-center gap-8">
-              <li><i class="fa-brands fa-react text-3xl"></i></li>
-              <li>
-                <img class="h-7 w-7" src="supabase-logo-icon.svg" alt="" />
-              </li>
-              <li><i class="fas fa-database text-4xl text-white"></i></li>
-            </ul>
-          </div> -->
         </div>
         <div class="w-1/2">
           <img
@@ -87,78 +77,13 @@
           />
         </div>
       </div>
-
-      <!-- <div class="w-full details-container h-screen">
-        <div class="flex items-center justify-center mt-24">
-          <div class="w-1/3">
-            <h2 class="text-2xl font-bold text-white">Features</h2>
-            <ul class="mt-4">
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Real-time
-                browsing
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Chat with
-                people all over the world
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> React with
-                funky floating emojis
-              </li>
-               <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Share
-                screenshots with your friends
-              </li>
-            </ul>
-          </div>
-          <div class="w-1/3">
-            <h2 class="text-2xl font-bold text-white">How it works</h2>
-            <ul class="mt-4">
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Download the
-                extension
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Visit a website
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Click on the
-                extension
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Start chatting
-                in the automatically created room
-              </li>
-            </ul>
-          </div>
-          <div class="w-1/3">
-            <h2 class="text-2xl font-bold text-white">How it works</h2>
-            <ul class="mt-4">
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Download the
-                extension
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Create a room
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Share the room
-                link with your friends
-              </li>
-              <li class="text-gray-300">
-                <i class="mr-2 text-green-500 fas fa-check"></i> Start browsing
-                together
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
     </div>
-    <!-- <footer class="fixed bottom-0 w-full text-gray-900 text-center py-2">
+    <footer class="fixed bottom-0 w-full text-gray-900 text-center py-2">
       <p class="text-white">
-        Made with 💜 by <span class="font-semibold">blah</span>
+        Proudly made in 🇮🇳 by
+        <span class="font-semibold">Team BrowserMingle</span>
       </p>
-    </footer> -->
+    </footer>
   </body>
 </html>
 <script>
@@ -175,4 +100,20 @@
     direction: "reverse",
     size: [4, 5],
   });
+  floating({
+    content:
+      '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/vim-linux.gif?t=2023-12-17T15%3A30%3A52.298Z"> <p style="font-size: 20%; color:white;">:q</p>',
+    number: 1,
+    direction: "reverse",
+    size: [4, 5],
+  });
+  floating({
+    content:
+      '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/mind-blown-mind-explosion.gif"> <p style="font-size: 20%; color:white;">big brain</p>',
+    number: 1,
+    direction: "reverse",
+    size: [4, 5],
+  });
+
+  //
 </script>
