changed footer text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <footer class="fixed bottom-0 w-full text-gray-900 text-center py-2">
       <p class="text-white">
-        Proudly made in 🇮🇳 by
+        Made with 💜 by
         <span class="font-semibold">Team BrowserMingle</span>
       </p>
     </footer>
