--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     content:
       '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/icon.png">',
     number: 1,
+    repeat: 1,
     size: [4, 5],
   });
   floating({
@@ -98,6 +99,7 @@
       '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/supabase.png">',
     number: 1,
     direction: "reverse",
+    repeat: 1,
     size: [4, 5],
   });
   floating({
@@ -105,6 +107,7 @@
       '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/vim-linux.gif?t=2023-12-17T15%3A30%3A52.298Z"> <p style="font-size: 20%; color:white;">:q</p>',
     number: 1,
     direction: "reverse",
+    repeat: 1,
     size: [4, 5],
   });
   floating({
@@ -112,6 +115,7 @@
       '<img src="https://rvcsutokdfgfytaugjyw.supabase.co/storage/v1/object/public/eggs/mind-blown-mind-explosion.gif"> <p style="font-size: 20%; color:white;">big brain</p>',
     number: 1,
     direction: "reverse",
+    repeat: 1,
     size: [4, 5],
   });
 
