added mindmap link and fixed description

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="https://unpkg.com/floating.js"></script>
   </head>
 
-  <body class="flex justify-center items-center">
+  <body class="bg-[#1c1c1c] flex justify-center items-center">
     <div class="">
       <div class="flex items-center justify-center h-screen px-72">
         <div class="w-1/2 px-8 text-left">
@@ -45,16 +45,29 @@
             Navigate the web, together.
           </h1>
           <p class="text-base font-medium text-gray-400">
-            Not your average Chat app. BrowserMingle is a chrome extension that
-            connects you with people who are consuming similar content. Connect,
-            Chat and spam emojis :D
+            Not your average Chat app.
+            <br />
+            A chrome extension that connects you with people who are consuming
+            similar content. Connect, Chat and spam emojis 😁
           </p>
-
+          <p class="mt-5">
+            <a
+              class="text-base font-medium text-gray-400 underline hover:decoration-purple-500"
+              href="https://tangy-jail.surge.sh/"
+              target="_blank"
+              >Learn more</a
+            >
+          </p>
           <div class="flex mt-8 justify-start font-normal">
             <button
               class="bg-purple-500 text-white px-4 py-2 rounded-md mr-4 hover:bg-purple-800 transition duration-300"
             >
-              <a href="#"> Download Extension </a>
+              <a
+                href="https://github.com/Sync-Codes/browser-mingle/releases"
+                target="_blank"
+              >
+                Download Extension
+              </a>
             </button>
 
             <button
@@ -72,7 +85,7 @@
         <div class="w-1/2">
           <img
             src="https://media.giphy.com/media/mDcYlTB4f8Mwur1j0Q/giphy.gif"
-            alt="Demo GIF"
+            alt="chipichipichapachapa"
             class="w-auto h-auto"
           />
         </div>
