--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             </button>
           </div>
         </div>
-        <div class="w-1/2">
+        <div class="w-1/2 h-2/3">
           <img
-            src="https://media.giphy.com/media/mDcYlTB4f8Mwur1j0Q/giphy.gif"
+            src="./assets/demo-gif.gif"
             alt="chipichipichapachapa"
-            class="w-auto h-auto"
+            class="w-auto h-full"
           />
         </div>
       </div>
